# model-viewer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  ebo.cpp  ebo.h  file.cpp  file.h  glad.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
include/json/: json.h
resources/shaders/: default.frag  default.vert
